# shadPS4-launcher

./: .env.template  .gitignore  README.md  biome.jsonc  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  deploy.yaml  linting.yaml
src/: App.css  App.tsx  app.css  app.tsx  main.tsx  types.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.deploy.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_migrations.rs  emu_process.rs  game_process.rs  handlers.rs  lib.rs  logger.rs  main.rs  utility_commands.rs
src-tauri/src/file_format/: psf.rs
src-tauri/src/game_process/: command.rs  game_process.rs  ipc.rs  log.rs  state.rs
src/components/: cheat-panel.tsx  config-modal.tsx  game-box.tsx  game-cover.tsx  game-library.tsx  gamepad-icon.tsx  gamepad-nav-field.tsx  gamepad.tsx  loading-overlay.tsx  log-list.tsx  main-page.tsx  modal-overlay.tsx  patch-panel.tsx  running-game-icon.tsx  running-game-icons.tsx  running-game-page.tsx  toolbar.tsx  update-icon.tsx  version-manager-modal.tsx
src/components/animate-ui/effects/: marquee-title.tsx  motion-highlight.tsx
src/components/animate-ui/radix/: tabs.tsx
src/components/modals/: cheats-and-patches-modal.tsx  config-modal.tsx  emu-config-modal.tsx  folder-config-modal.tsx  game-details-modal.tsx  running-game-modal.tsx  version-manager-modal.tsx
src/components/pages/: main-page.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  game-title.tsx  input.tsx  label.tsx  navigable.tsx  progress.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  sonner.tsx  spinner.tsx  table.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/components/window/: emu-config-window.tsx
src/handlers/: auto-update.ts  cheats-and-patches.ts  game-process.ts  gamepad.ts  run-emu.ts  run_emu.ts  version-manager.ts  window.ts
src/hooks/: useAbort.tsx  useFocus.tsx  useGamepad.tsx  useGamepadInputStack.tsx
src/lib/: native-calls.ts
src/lib/context/: gamepad-input-stack.tsx  gamepad-nav-field.tsx  navigator-provider.tsx
src/lib/hooks/: useAbort.ts  useDebounce.ts  useDebounceAction.ts  useDebounceEffect.ts  useGameCover.ts  useGamepadInputStack.ts  useGamepadInputStack.tsx  useGamepadNavField.ts  useNavigator.ts  useThemeStyle.ts
src/lib/native/: common.ts  forward-log.ts  game-process.ts  psf.ts
src/lib/nt/: fetch.ts  timeout.ts
src/lib/safe/: fetch.ts
src/lib/utils/: error.ts  events.ts  flow.ts  strings.ts  types.ts
src/lib/utils/jotai/: atom-keep-last.ts  tauri-store.ts
src/providers/: Gamepad.tsx  gamepad-input-stack.tsx
src/store/: cheats-and-patches.ts  common.ts  config.ts  db.ts  game-library.ts  gamepad.ts  index.ts  paths.ts  running-games.ts  store.ts  version-manager.ts
src/utils/: error.ts  events.ts  types.ts
src/utils/jotai/: atom-deep-compare.ts  atom-keep-last.ts  tauri-store.ts
