[package]
name = "shadps4-launcher"
version = "0.1.0"
description = "ShadPS4 Launcher"
authors = ["Vinicius Rangel <me@viniciusrangel.dev>"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shadps4_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
anyhow-tauri = "1.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1.1.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
thiserror = "2.0.11"
zerocopy = { version = "0.8.17", features = ["std"] }
zerocopy-derive = "0.8.17"
