[package]
name = "shadps4-launcher"
version = "1.0.0"
description = "ShadPS4 Launcher"
authors = ["Vinicius Rangel <me@viniciusrangel.dev>"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shadps4_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.95"
anyhow-tauri = "1.0.0"
dotenvy = "0.15.7"
log = "0.4"
num-derive = "0.4.2"
num-traits = "0.2.19"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1.1.0"
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-upload = { version = "2", features = ["rustls-tls"] }
thiserror = "2.0.11"
time = "0.3"
tokio = { version = "1.44.1", features = ["full"] }
zerocopy = { version = "0.8.17", features = ["std"] }
zerocopy-derive = "0.8.17"
zip = "2.2.3"
